overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ics-service-ingress
  namespace: ics-service-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/internal: "true"
spec:
  rules:
    - host: ics-service.internal
      http:
        paths:
          - path: /chemicals/api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ics-service
                port:
                  number: 9090
          - path: /actuator(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ics-service
                port:
                  number: 9091
  tls:
    - hosts:
        - ics-service.internal
      secretName: ics-service-tls-secret
